--- a/BookStore.FrontEnd.Site/BookStore.FrontEnd.Site.csproj
+++ b/BookStore.FrontEnd.Site/BookStore.FrontEnd.Site.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Models\EFModels\OrderItem.cs" />
     <Compile Include="Models\EFModels\Product.cs" />
     <Compile Include="Models\Infra\HashUtility.cs" />
+    <Compile Include="Models\ViewModels\RegisterVm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
