--- a/BookStore.FrontEnd.Site/Web.config
+++ b/BookStore.FrontEnd.Site/Web.config
@@ -18,6 +18,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+
+	  <authentication mode="Forms">
+		  <forms name="bookstore" loginUrl="/Members/Login/" defaultUrl="/Members/Index/">
+		  </forms>
+	  </authentication>
+	  
   </system.web>
   <system.webServer>
     <handlers>
